tests/ui/regions/regions-pattern-typing-issue-19997.stderr
error[E0506]: cannot assign to `a1` because it is borrowed
  --> $DIR/regions-pattern-typing-issue-19997.rs:7:13
   |
LL |     match (&a1,) {
   |            --- `a1` is borrowed here
LL |         (&ref b0,) => {
LL |             a1 = &f;
   |             ^^^^^^^ `a1` is assigned to here but it was already borrowed
LL |             drop(b0);
   |                  -- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
